# kted-edu

./: .env  .gitignore  DAY01_002_Langchain_Components.ipynb  DAY01_003_LangSmith_LCEL.ipynb  DAY01_004_LangServe.ipynb  DAY01_005_RAG.ipynb  DAY01_006_Prompt_Engineering_Fewshot.ipynb  README.md  main.py  math_client_gradio.py  mcp_client.ipynb  mcp_config.json  naver_news_yfinance_server.py  pyproject.toml
Day1/: DAY01_001_OpenAI_Chat_Completion.ipynb  DAY01_003_LangSmith_LCEL.ipynb  DAY01_004_LangServe.ipynb  DAY01_005_RAG.ipynb  DAY01_006_Prompt_Engineering_Fewshot.ipynb  DAY01_007_Langfuse_Pompt_Management.ipynb
Day2/: DAY02_001_RAG_Evalution.ipynb  DAY02_002_Retrieval_Metrics.ipynb  DAY02_003_Hybrid_Search.ipynb  DAY02_004_Query_Expansion.ipynb  DAY02_005_Rerank_Compression.ipynb  DAY02_006_Generation_Metrics.ipynb  DAY02_007_LLM-as-Judge-LangChain.ipynb  DAY02_008_Langfuse_Evaluation.ipynb
Day2/chroma_db/: chroma.sqlite3
Day3/: DAY03_001_ToolCalling_Agent.ipynb  DAY03_002_LangChain_Tools.ipynb  DAY03_003_LangGraph_StateGraph.ipynb  DAY03_004_LangGraph_MessageGraph.ipynb  DAY03_005_LangGraph_ReAct.ipynb  DAY03_006_LangGraph_Memory.ipynb  DAY03_007_LangGraph_HITL.ipynb  DAY03_008_LangGraph_SelfRAG.ipynb
app/: gradio_app.py  rag.py  server.py
data/: evaluation_result.csv  korean_docs_final.jsonl  restaurant_menu.txt  restaurant_wine.txt  testset.xlsx  테슬라_KR.md  리비안_KR.md
