[project]
name = "kted-edu"
version = "1.2.0"
description = "1일차+2일차"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "hf-xet>=1.1.5",
    "ipykernel>=6.29.5",
    "kiwipiepy>=0.21.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-cli>=0.0.36",
    "langchain-community[all]>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.24",
    "langfuse>=3.0.4",
    "langgraph>=0.4.8",
    "langserve[all]>=0.3.1",
    "mcp[cli]>=1.9.4",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.13.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "tavily-python>=0.7.8",
    "yfinance>=0.2.63",
]

[tool.uv.workspace]
members = [
    "ktds-edu",
]
